--- a/Desc.css
+++ b/Desc.css
@@ -56,3 +56,12 @@ header h1 {
     color: #A896D6;
     text-decoration: underline;
 }
+
+.title {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.title2 {
+    font-weight: bold;
+}
