--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,9 +5,25 @@
 
 /*Fonts*/
 
-@import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap'); /*font-family: 'ABeeZee', sans-serif;*/
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); /*font-family: 'Poppins', sans-serif;*/
+
+
+/*Variaveis*/
+
+:root {
+    --cor0: #4E366B;
+    --cor1: #6A5491;
+    --cor2: #A896D6;
+    --cor3: #CDC7EB;
+    --cor4: #EFE9F7;
+
+    --font-padrão: Arial, Verdana, Helvetica, sans-serif;
+    --font-tittle: 'ABeeZee', sans-serif;
+    --font-link: 'Poppins', sans-serif;
+
+}
 
 /*Config Globais*/
 
@@ -17,125 +33,154 @@
 }
 
 body {
+    font-family: var(--font-padrão);
     background-color: #EFE9F7;
-    height: 100%;
 }
 
-.clear {
-    clear: both;
-}
+/*Cabeça / Header*/
 
-/*Header - Cabeça*/
-
-header {
+.header {
     background-color: #4E366B;
-    height: 90px;
+    width: 100%;
+    height: 92px;
 }
 
-/*Titulo*/
+.header-tittle {
+    color: var(--cor3);
+    font-family: var(--font-tittle);
+    text-align: center;
+    padding-top: 5px;
+}
 
-header h1 {
-    font-size: 2.1em;
-    font-family: 'ABeeZee', sans-serif;
-    color: #EFE9F7;
+/*Header-Menu-Nav */
+
+.header-nav {
+    margin-top: 25px;
+}
+
+/*Header-Menu-Links*/
+
+header > nav > a {
+    color: var(--cor3);
+    font-family: var(--font-link);
+    font-size: 16px;
+    text-decoration: none;
+    transition-duration: 0.5s
+}
+
+/*Link1*/
+
+.header-nav-link-1 {
     padding-left: 69px;
-    padding-top: 24px;
+    padding-right: 156px;
+    padding-top: 7px;
 }
 
-/*Links*/
-
-.dev {
-    font-size: 1.1em;
-    font-family: 'Poppins', sans-serif;
-    color: #EFE9F7;
-    margin-left: 939px;
-    margin-right: 70px;
-    text-decoration: none;
+header > nav > a:hover {
+    background-color: var(--cor2);
+    color: var(--cor0);
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
 }
 
-.dev:hover {
-    color: #A896D6;
-    text-decoration: underline;
+
+/*Link2*/
+
+.header-nav-link-2 {
+    padding-right: 156px;
+    padding-left: 156px;
+    padding-top: 7px;
 }
 
-.Desc  {
-    font-size: 1.1em;
-    font-family: 'Poppins', sans-serif;
-    color: #EFE9F7;
-    text-decoration: none;
+/*Link3*/
+
+.header-nav-link-3 {
+    padding-left: 156px;
+    padding-right: 141px;
+    padding-top: 7px;
 }
 
-.Desc:hover {
-    color: #A896D6;
-    text-decoration: underline;
-}
+/*Main / Corpo*/
 
-/*Corpo*/
-
-main {
+.main {
     display: flex;
+    align-content: stretch;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: stretch;
 }
 
 /*As vantagens de ser invisível*/
 
-.titulo-AVdsI {
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 2em;
-    margin-top: 10px;
-    margin-left: 15px;
-    max-width: 447px;
+.main-div-1-tittle-1 {
+    font-family: var(--font-tittle);
+    font-size: 1.8em;
+    margin-top: 35px;
+    text-align: center;
 }
 
-.AVdsI {
-    margin-top: 26px;
-    margin-left: 62px;
+.main-div-1-image-1 {
+    margin-top: 25px;
+    margin-left: 15px;
 }
 
 /*Divergente*/
 
-.titulo-Diver {
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 2em;
-    margin-top: 10px;
-    margin-left: 75px;
-    max-width: 447px;
+.main-div-2-tittle-2 {
+    font-family: var(--font-tittle);
+    font-size: 1.8em;
+    margin-top: 35px;
+    text-align: center;
 }
 
-.Diver {
-    margin-top: 26px;
-    margin-left: 10px;
+.main-div-2-image-2 {
+    margin-top: 25px;
+    margin-left: 15px;
 }
 
 /*Esquadrão Suicida*/
 
-.titulo-EdS {
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 2em;
-    max-width: 447px;
-    margin-top: 10px;
-    margin-left: 125px;
+.main-div-3-tittle-3 {
+    font-family: var(--font-tittle);
+    font-size: 1.8em;
+    margin-top: 35px;
+    text-align: center;
 }
 
-.EdS {
-    margin-top: 26px;
-    margin-left: 103px;
+.main-div-3-image-3 {
+    margin-top: 25px;
+    margin-left: 15px;
 }
 
-/*Footer - Rodape*/
+/*Footer / Rodape*/
 
-footer {
+.footer {
     background-color: #4E366B;
-    padding-top: 76px;
+    width: 100%;
+    height: 70px;
+    margin-top: 22px;
 }
 
-.devs {
-    color: #CDC7EB;
+/*Footer - Text*/
+
+.footer-text {
     text-align: center;
-    margin-top: -54px;
+    color: var(--cor3);
+    padding-top: 30px;
 }
 
-.teste {
-    color: #CDC7EB;
+/*Footer - Link*/
+
+.footer-text-link {
+    text-decoration: none;
     text-align: center;
-    margin-top: 10px;
+    color: var(--cor3);
 }
+
+.footer-text-link:hover {
+    text-decoration: underline;
+}
+
