--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,13 +34,13 @@
 
 body {
     font-family: var(--font-padrão);
-    background-color: #EFE9F7;
+    background-color: var(--cor4);
 }
 
 /*Cabeça / Header*/
 
 .header {
-    background-color: #4E366B;
+    background-color: var(--cor0);
     width: 100%;
     height: 92px;
 }
