--- a/CSS/AVdS.css
+++ b/CSS/AVdS.css
@@ -34,3 +34,157 @@ body {
     background-color: var(--cor4);
 }
 
+/*Cabeça / Header*/
+
+.header {
+    background-color: var(--cor0);
+    width: 100%;
+    height: 92px;
+}
+
+.header-tittle {
+    color: var(--cor3);
+    font-family: var(--font-tittle);
+    text-align: center;
+    padding-top: 5px;
+}
+
+/*Header-nav*/
+
+.header-menu {
+    margin-top: 25px;
+}
+
+/*Header-Menu-Links*/
+
+header > nav > a {
+    color: var(--cor3);
+    font-family: var(--font-link);
+    font-size: 1em;
+    text-decoration: none;
+    transition-duration: 0.5s;
+}
+
+/*Link1*/
+
+.header-menu-link-1 {
+    padding-top: 7px;
+    padding-right: 156px;
+    padding-left: 154px;
+}
+
+/*Links2*/
+
+.header-menu-link-2 {
+    padding-top: 7px;
+    padding-right: 156px;
+    padding-left: 196px;
+}
+
+/*Link3*/
+
+.header-menu-link-3 {
+    padding-top: 7px;
+    padding-right: 141px;
+    padding-left: 214px;
+}
+
+/*Links Hover*/
+
+header > nav > a:hover {
+    background-color: var(--cor2);
+    color: var(--cor0);
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
+
+/*Main / Corpo*/
+
+.main {
+    display: flex;
+    align-content: stretch;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: stretch;
+}
+
+/*Titulo-Sinopse*/
+
+.main-div-1-tittle {
+    font-family: var(--font-tittle);
+    font-size: 1.8em;
+    margin-top: 35px;
+    text-align: center;
+}
+
+.main-div-1-text {
+    text-align: justify;
+    text-indent: 30px;
+    font-size: 1.2em;
+    width: 315px;
+    margin-top: 29px;
+    margin-left: 20px;
+}
+
+/*Titulo-Imagem*/
+
+.main-div-2-tittle {
+    font-family: var(--font-tittle);
+    font-size: 1.8em;
+    margin-top: 35px;
+    text-align: center;
+}
+
+.main-div-2-image {
+    margin-top: 25px;
+    margin-left: 26px;
+}
+
+/*Titulo-Informações adicionais*/
+
+.main-div-3-tittle {
+    font-family: var(--font-tittle);
+    font-size: 1.8em;
+    margin-top: 35px;
+    text-align: center;
+}
+
+.main-div-3-text {
+    font-size: 1.2em;
+    width: 315px;
+    margin-top: 29px;
+    margin-left: 0px;
+    line-height: 30px;
+}
+
+/*Footer / Rodape*/
+
+.footer {
+    background-color: #4E366B;
+    width: 100%;
+    height: 70px;
+    margin-top: 22px;
+}
+
+/*Footer - Text*/
+
+.footer-text {
+    text-align: center;
+    color: var(--cor3);
+    padding-top: 30px;
+}
+
+/*Footer - Link*/
+
+.footer-text-link {
+    text-decoration: none;
+    text-align: center;
+    color: var(--cor3);
+}
+
+.footer-text-link:hover {
+    text-decoration: underline;
+}
