--- a/CSS/style.css
+++ b/CSS/style.css
@@ -71,10 +71,29 @@ header > nav > a {
 /*Link1*/
 
 .header-nav-link-1 {
-    padding-left: 69px;
-    padding-right: 156px;
     padding-top: 7px;
+    padding-right: 156px;
+    padding-left: 69px;
 }
+
+
+/*Link2*/
+
+.header-nav-link-2 {
+    padding-top: 7px;
+    padding-right: 156px;
+    padding-left: 156px;
+}
+
+/*Link3*/
+
+.header-nav-link-3 {
+    padding-top: 7px;
+    padding-right: 141px;
+    padding-left: 156px;
+}
+
+/*Links Hover*/
 
 header > nav > a:hover {
     background-color: var(--cor2);
@@ -83,23 +102,6 @@ header > nav > a:hover {
     border-top-left-radius: 3px;
     border-bottom-right-radius: 3px;
     border-bottom-left-radius: 3px;
-}
-
-
-/*Link2*/
-
-.header-nav-link-2 {
-    padding-right: 156px;
-    padding-left: 156px;
-    padding-top: 7px;
-}
-
-/*Link3*/
-
-.header-nav-link-3 {
-    padding-left: 156px;
-    padding-right: 141px;
-    padding-top: 7px;
 }
 
 /*Main / Corpo*/
@@ -115,42 +117,42 @@ header > nav > a:hover {
 
 /*As vantagens de ser invisível*/
 
-.main-div-1-tittle-1 {
+.main-div-1-tittle {
     font-family: var(--font-tittle);
     font-size: 1.8em;
     margin-top: 35px;
     text-align: center;
 }
 
-.main-div-1-image-1 {
+.main-div-1-image {
     margin-top: 25px;
     margin-left: 15px;
 }
 
 /*Divergente*/
 
-.main-div-2-tittle-2 {
+.main-div-2-tittle {
     font-family: var(--font-tittle);
     font-size: 1.8em;
     margin-top: 35px;
     text-align: center;
 }
 
-.main-div-2-image-2 {
+.main-div-2-image {
     margin-top: 25px;
     margin-left: 15px;
 }
 
 /*Esquadrão Suicida*/
 
-.main-div-3-tittle-3 {
+.main-div-3-tittle {
     font-family: var(--font-tittle);
     font-size: 1.8em;
     margin-top: 35px;
     text-align: center;
 }
 
-.main-div-3-image-3 {
+.main-div-3-image {
     margin-top: 25px;
     margin-left: 15px;
 }
