--- a/CSS/AVdS.css
+++ b/CSS/AVdS.css
@@ -4,6 +4,8 @@
 
 @charset "UTF-8";
 
+/*Fonts*/
+
 @import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap'); /*font-family: 'ABeeZee', sans-serif;*/
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); /*font-family: 'Poppins', sans-serif;*/
@@ -49,7 +51,7 @@ body {
     padding-top: 5px;
 }
 
-/*Header-nav*/
+/*Header-Menu*/
 
 .header-menu {
     margin-top: 25px;
