Estilização e finalização da página ES

--- a/CSS/AVdS.css
+++ b/CSS/AVdS.css
@@ -113,7 +113,7 @@ header > nav > a:hover {
     align-items: stretch;
 }
 
-/*Titulo-Sinopse*/
+/*Sinopse*/
 
 .main-div-1-tittle {
     font-family: var(--font-tittle);
@@ -131,7 +131,7 @@ header > nav > a:hover {
     margin-left: 20px;
 }
 
-/*Titulo-Imagem*/
+/*Capa*/
 
 .main-div-2-tittle {
     font-family: var(--font-tittle);
@@ -145,7 +145,7 @@ header > nav > a:hover {
     margin-left: 26px;
 }
 
-/*Titulo-Informações adicionais*/
+/*Informações adicionais*/
 
 .main-div-3-tittle {
     font-family: var(--font-tittle);
