--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,8 +72,8 @@ header > nav > a {
 
 .header-menu-link-1 {
     padding-top: 7px;
-    padding-right: 156px;
-    padding-left: 69px;
+    padding-right: 195px;
+    padding-left: 157px;
 }
 
 
@@ -81,16 +81,16 @@ header > nav > a {
 
 .header-menu-link-2 {
     padding-top: 7px;
-    padding-right: 156px;
-    padding-left: 156px;
+    padding-right: 294px;
+    padding-left: 242px;
 }
 
 /*Link3*/
 
 .header-menu-link-3 {
     padding-top: 7px;
-    padding-right: 141px;
-    padding-left: 156px;
+    padding-right: 233px;
+    padding-left: 283px;
 }
 
 /*Links Hover*/
@@ -98,10 +98,7 @@ header > nav > a {
 header > nav > a:hover {
     background-color: var(--cor2);
     color: var(--cor0);
-    border-top-right-radius: 3px;
-    border-top-left-radius: 3px;
-    border-bottom-right-radius: 3px;
-    border-bottom-left-radius: 3px;
+   border-radius: 3px;
 }
 
 /*Main / Corpo*/
@@ -163,7 +160,7 @@ header > nav > a:hover {
     background-color: #4E366B;
     width: 100%;
     height: 70px;
-    margin-top: 22px;
+    margin-top: 220px;
 }
 
 /*Footer - Text*/
