--- a/CSS/filmes.css
+++ b/CSS/filmes.css
@@ -70,24 +70,32 @@ header > nav > a {
 
 .header-menu-link-1 {
     padding-top: 7px;
-    padding-right: 195px;
-    padding-left: 157px;
+    padding-right: 169px;
+    padding-left: 169px;
 }
 
 /*Links2*/
 
 .header-menu-link-2 {
     padding-top: 7px;
-    padding-right: 294px;
-    padding-left: 242px;
+    padding-right: 169px;
+    padding-left: 169px;
 }
 
 /*Link3*/
 
 .header-menu-link-3 {
     padding-top: 7px;
-    padding-right: 233px;
-    padding-left: 283px;
+    padding-right: 169px;
+    padding-left: 169px;
+}
+
+/*Link4*/
+
+.header-menu-link-4 {
+    padding-top: 7px;
+    padding-right: 169px;
+    padding-left: 169px;
 }
 
 /*Links Hover*/
