--- a/CSS/style.css
+++ b/CSS/style.css
@@ -204,6 +204,7 @@ header > nav > a:hover {
     float: right;
     padding-top: 0 ;
     color: #CDC7EB;
+    font-family: var(--font-link);
 }
 
 .log a:hover {
