--- a/CSS/Princ.css
+++ b/CSS/Princ.css
@@ -128,9 +128,12 @@ div.films h1 {
 div.films img {
     width: 169px;
     height: 230px;
+    box-shadow: 4px 5px 13px 0px rgba(0, 0, 0, 0.719);
 }
 
 /*Link -a*/
+
+
 
 .films a {
     text-decoration: none;
@@ -140,3 +143,4 @@ div.films img {
 .films a:hover {
     text-decoration: underline;
 }
+
