--- a/CSS/Princ.css
+++ b/CSS/Princ.css
@@ -130,6 +130,7 @@ div.films img {
     width: 169px;
     height: 242px;
     box-shadow: 4px 5px 13px 0px rgba(0, 0, 0, 0.719);
+    border-radius: 10px;
 }
 
 /*Link -a*/
