--- a/CSS/Princ.css
+++ b/CSS/Princ.css
@@ -145,3 +145,31 @@ div.films img {
     text-decoration: underline;
 }
 
+/*Footer / Rodape*/
+
+.footer {
+    background-color: #4E366B;
+    width: 100%;
+    height: 70px;
+    margin-top: 220px;
+}
+
+/*Footer - Text*/
+
+.footer-text {
+    text-align: center;
+    color: var(--cor3);
+    padding-top: 30px;
+}
+
+/*Footer - Link*/
+
+.footer-text-link {
+    text-decoration: none;
+    text-align: center;
+    color: var(--cor3);
+}
+
+.footer-text-link:hover {
+    text-decoration: underline;
+}
